
170307 Martin Mann :
 * header defines prefixed with INTARNA_
 * general.h :
   + checks if defines with general names are already present
   * intarna specific defines prefixed with INTARNA_
 * configure.ac :
   * VRNA configure flag conform with LocARNA (--with-vrna)
 * README.md
   + (minimal) library information added
 * CommandLineParsing :
   + argument boundaries for outDeltaE and outMaxE
 * SeedHandler :
   * traceBackSeed() : 
     * bugfix: was not using offset1/2

170306 Martin Mann :
 + src/IntaRNA : subfolder that holds all libIntaRNA related sources
 + "IntaRNA" namespace for all libIntaRNA sources
 + libIntaRNA.a build
 * tests adapted to library usage
 * configure.ac :
   + pkg-config based VRNA version check (optional)
   + --disable-pkg-config switch
   * tests rewritten using AS_IF()
   + AC_CONFIG_MACRO_DIR() replaces individual m4_include() calls
   + VRNA_REQUIRED_VERSION variable
   + AC_PROG_RANLIB
   + pkg-config related files and commands

170227 Martin Mann :
 * InteractionEnergy :
   + getE_multi() : generic function to get the energy contribution of a 
     intramolecularly structured gap between two interaction sites
 * InteractionEnergy :
 * InteractionEnergyBasePair :
 * InteractionEnergyIdxOffset :
 * InteractionEnergyVrna :
   - getEU() : renamed to getE_multiUnpaired()
   + getE_multiUnpaired() : former getEU()
   + getE_multiHelix() : penalty for the intermolecular site that is part of the
     intermolecular multiloop as a helix (right interaction site)
   + getE_multiClosing() : penalty for closing the multi-site gap (on the left)

##### version 2.0.1 

170221 Martin Mann :
 * PredictionTrackerPairMinE :
   * writeData() :
     * column order reversed to be index ascending

170219 Martin Mann :
 * RnaSequence :
   + operator == : equality check (id,length,seq)
 * PredictionTrackerPairMinE :
   * writeData() :
     + col/row header now includes sequence position beside according nucleotide
 * PredictionTrackerProfileMinE :